# bookshelf_hackathon24

./: .env.sample  .gitignore  README.md  load_books.py  pyproject.toml
app/: __init__.py  models.py
app/ai_assistant/: generation.py  utils.py
app/ai_assistent/: generation.py  parser.py  prompts.py  utils.py
app/components/: __init__.py
app/constants/: genres.py
app/controllers/: __init__.py
app/game/: utils.py
app/game/quiz/ai_bot/: generation.py  prompts.py
app/nsfw_detection/api/: api_handler.py
app/nsfw_detection/cv/: check.py
app/nsfw_detection/generation/: generation_config.py
app/nsfw_detection/generation/prompts/: system_prompt.py
app/parser/: generation.py  utils.py
app/routes/: __init__.py
app/routes/admin/: __init__.py
app/routes/api/: __init__.py
app/routes/auth/: __init__.py
app/routes/books/: __init__.py
app/routes/chat/: __init__.py
app/routes/quiz/: __init__.py
app/routes/search/: __init__.py
app/template/: __init__.py  filters.py
migrations/versions/: 7e96a480b364_init_migrate.py
templates/: index.j2
templates/components/: book.j2  header.j2  icon.j2  search.j2
templates/layouts/: empty.j2
templates/modals/: book.j2  modal.j2
templates/pages/: book.j2  chat.html  index.j2  login.j2  me.j2  quiz.html  quiz.j2  register.j2  search.j2
templates/pages/admin/: index.j2
